assets/less/seriously.less
/* ... */
    /* ******************************

    Desktop Layout

    ****************************** */

    @media (min-width:@breakpointSingleColumn) and (min-height:@breakpointUnfixHeight) {

        .fix-header {
            header {
                width:70%;
                left:15%;
            }
        }

        #products {
            display: table;
            .product {
                display: table-row;
                .left_info,.image_container,.details_container {
                    display: table-cell;
                    vertical-align: top;
                }

                .left_info,.details_container {
                    padding: @base-spacing*2;
                    padding-top: @base-spacing*6;
                    h1 {
                        text-align: right;
                    }
                }


                .image_container {
                    position:relative;

                    padding: @base-spacing*2;
                    padding-bottom: @base-spacing*4;
                    
                }
                .description {
                    width: 100%;
                    max-width:100%;
                }
                .text {
                    width:100%;
                }

            }

        }

        .product {
           
            .left_info {
                text-align: right;
                width:25%;
            }

            .description {
                 margin-left: auto;
                 max-width: none;

            }

            .image_container {
                width:50%;
                &:before {
                    display: none;
                }
            }

            .details_container {
                text-align: left;
                width:25%;



            }
        }


        #product {

            .left_info,
            .details_container {
                position:fixed;
                width:20%;
                top:38%;
                float: none;
            }
            .left_info {
                left:4%;
                // .transition(~"opacity 0.5s @{ease}, -webkit-transform 0.5s @{ease},-moz-transform 0.5s @{ease},transform 0.5s @{ease}");
                .transition(~"all @{speed} @{ease}");
                .description {
                    padding-right: 0;
                    text-align: right;
                    .social {
                        background-position: top right;
                    }
                }
                h1 {
                    text-align: right;
                    margin-bottom: 1em;
                    line-height: 1.1em;

                }
            }
            .details_container {
                right:4%;
                top:45%;
                // .transition(~"opacity 0.5s @{ease}, -webkit-transform 0.5s @{ease},-moz-transform 0.5s @{ease},transform 0.5s @{ease}");
                .transition(~"all @{speed} @{ease}");
                .fun &  {
                        &:after {
                            right:10%;
                            top:100px;

                        }
                }
            }


            .image_container {
                .transition(~"all @{speed} @{ease}");

                // padding: 0 5%;
                position: static;
                height: auto;
                margin:0 auto;
                padding-bottom: @base-spacing*4;
                padding-top: @base-spacing*2;
                float: none;
                width:50%;
                overflow: hidden;
                .box-shadow(none);
                .inner {
                    width:96%;
                    margin:0 auto;
                    cursor: pointer;    
                    cursor: -webkit-zoom-in; 
                    cursor: -moz-zoom-in;
                    li {
                        display: block;
                    }
                }
                
                figure {
                    margin-bottom: 2em;
                    img {
                        
                        // .accerlateTransform();
                        max-height: none;
                        width:100%;
                        height: auto;
                    }
                }

            }

        }
        

        #products.related {
            // width:50%;
            .productlist {
                display: table;
                
            }
            .text{
                display: none;
            }

        }




        .imagezoom {

            #product {
                .image_container {
                    .inner {
                        cursor: -webkit-zoom-out; 
                        cursor: -moz-zoom-out;

                        &:before {
                            content:"✕";
                            position: fixed;
                            right:@base-spacing*2;
                            top:@base-spacing*2;
                            padding: @base-spacing;
                            font-size: 3em;
                            z-index: 200;
                        };
                    }

                    width:95%;
                }

                .left_info {
                    .transform(translate(-500px, 0));
                    .opacity(0);
                }
                .details_container {
                    .transform(translate(500px, 0));
                    .opacity(0);
                } 
            }

            
        }

        .scrolled-to-related & {
            #product {
               .left_info {
                   .transform(translate(-500px, 0));
                   .opacity(0);
               }
               .details_container {
                   .transform(translate(500px, 0));
                   .opacity(0);
               } 
            }
        }

        .page {
            .html_content {
                img {
                    width:75%;
                    margin-left: 25%;
                }
            }
        }
    }
/* ... */

